# opencad-storm-sewer-plugin

./: Cargo.toml  PLUGIN.md  README.md  plugin.toml
.github/workflows/: release.yml
crates/stormsewer/: Cargo.toml  README.md
crates/stormsewer/examples/: sample_landxml.xml
crates/stormsewer/src/: catchment.rs  drawing.rs  hydraulics.rs  idf.rs  lib.rs  network.rs  params.rs  parse.rs  report.rs  report_html.rs
crates/stormsewer/src/design/: inlets.rs  mod.rs  review.rs  sizing.rs
crates/stormsewer/src/hydrology/: idf_set.rs  mod.rs  tc.rs
crates/stormsewer/src/io/: landxml.rs  mod.rs
examples/: automate_analyze.py
src/: analysis.rs  data.rs  dispatch.rs  edit.rs  html_report.rs  integration_tests.rs  interactive.rs  landxml_import.rs  lib.rs  params_cmd.rs  placement.rs  sizing.rs  state.rs  style.rs  validation.rs
