[workspace]
members = [".", "crates/stormsewer"]
resolver = "2"

[package]
name = "opencad-storm-sewer-plugin"
version = "0.2.0"
edition = "2021"
description = "Storm Sewer hydraulics add-on for Open CAD Studio — external cdylib plugin."
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib"]

[dependencies]
ocs_plugin_api = { git = "https://github.com/HakanSeven12/OpenCADStudio", features = ["host"] }
acadrust = "0.3.4"
stormsewer = { path = "crates/stormsewer" }

[patch.crates-io]
acadrust = { git = "https://github.com/HakanSeven12/acadrust", branch = "main" }