[workspace]
members = [".", "crates/stormsewer"]
resolver = "2"

[package]
name = "opencad-storm-sewer-plugin"
version = "0.2.2"
edition = "2021"
description = "Storm Sewer hydraulics add-on for Open CAD Studio — external cdylib plugin."
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Pin to OCS v0.6.0+ for InteractiveCommand / API v2.
ocs_plugin_api = { git = "https://github.com/HakanSeven12/OpenCADStudio", rev = "495455180865785ae8cc1875e61ef9bc03494cc5", features = ["host"] }
acadrust = "0.3.4"
stormsewer = { path = "crates/stormsewer" }

[patch.crates-io]
# Match the host's acadrust fork for binary compatibility (see plugin-architecture.md).
acadrust = { git = "https://github.com/HakanSeven12/acadrust", branch = "main" }